# NICNAC16-SIM

./: .classpath  .gitignore  .project  CMakeLists.txt  LICENSE  README.md  project.config  run.bat  run.sh  setup.sh
.github/workflows/: ci.yml
NICNAC16-ISA/: README.md  isa.json
cpp_include/: processor.hpp
cpp_src/: main.cpp  processor.cpp
generated_cpp/: decoder.cpp  decoder.hpp  instruction.cpp  instruction.hpp
legacy_java/de/czempin/nicnac16/: Processor.java
legacy_java/de/czempin/nicnac16/simulator/: Main.java
legacy_java/test/java/de/czempin/nicnac16/simulator/: DecoderTest.java
scripts/: generate_from_spec.py  run_lint.sh
src/de/czempin/nicnac16/: Instruction.java  Processor.java
src/de/czempin/nicnac16/assembler/: Instruction.java  Processor.java
src/de/czempin/nicnac16/simulator/: Decoder.java  Main.java
tests/: CMakeLists.txt  catch.hpp  simulator_basic.cpp  test_simulator.py
